--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -6,7 +6,8 @@
       "name": "KNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKzweDbmr+q+IVYqZW8rBr",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPqBbbJfQrKdbvF3x4mN2i8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mohamedamr13/gmc/blob/main/KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mohamedamr13/Machine-Learning-/blob/main/KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +44,7 @@
         "from sklearn import metrics\n",
         "import random"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,41 +74,20 @@
         "   else:\n",
         "     testSet.append(x)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 337
-        },
-        "id": "gYZS3frF-4hC",
-        "outputId": "45cb1cfd-e25e-4f8c-c50f-9432c0b18a29"
+        "id": "gYZS3frF-4hC"
       },
       "source": [
         "splitSet(0.66)\n",
         "testSet.head(5)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-7fc02a5230da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msplitSet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.66\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtestSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-19-bff5804f1d63>\u001b[0m in \u001b[0;36msplitSet\u001b[0;34m(split)\u001b[0m\n\u001b[1;32m      5\u001b[0m  \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m    \u001b[0;32mif\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m      \u001b[0mtrainingSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m    \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m      \u001b[0mtestSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mappend\u001b[0;34m(self, other, ignore_index, verify_integrity, sort)\u001b[0m\n\u001b[1;32m   7749\u001b[0m             \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7750\u001b[0m             \u001b[0mverify_integrity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7751\u001b[0;31m             \u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7752\u001b[0m         )\n\u001b[1;32m   7753\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    282\u001b[0m         \u001b[0mverify_integrity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m         \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m         \u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    285\u001b[0m     )\n\u001b[1;32m    286\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    357\u001b[0m                     \u001b[0;34m\"only Series and DataFrame objs are valid\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    358\u001b[0m                 )\n\u001b[0;32m--> 359\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    360\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m             \u001b[0;31m# consolidate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: cannot concatenate object of type '<class 'str'>'; only Series and DataFrame objs are valid"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -134,7 +114,7 @@
         "     else:\n",
         "       trainingSet.append(selTuple)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -153,7 +133,7 @@
         "print ('Train: ' + repr(len(trainingSet)))\n",
         "trainingSet\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,36 +259,19 @@
         "  \n",
         "  return math.sqrt(sum)"
       ],
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 162
-        },
-        "id": "ozAylY_NX2b2",
-        "outputId": "0b225cdb-1e47-4f28-9b1d-42472dfdcc8f"
+        "id": "ozAylY_NX2b2"
       },
       "source": [
         "float(\"Iris-setosa\")"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-1d58e64c4321>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Iris-setosa'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Iris-setosa'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -328,7 +291,7 @@
         "\n",
         "distance"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +331,7 @@
         "\n",
         "  return neighbors"
       ],
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -387,7 +350,7 @@
         "neighbors = getNeighbors(trainingSet, testInstance, k)\n",
         "print(neighbors)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +394,7 @@
       "source": [
         "print ( getResponse(neighbors) )"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +414,7 @@
       "source": [
         "test = lambda x  , y : x == y\n"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -460,7 +423,7 @@
         "id": "tKbPIthvf-GK"
       },
       "source": [
-        "TESTING PHASE"
+        "## Testing Phase"
       ]
     },
     {
@@ -473,7 +436,7 @@
         " neighbors =  getNeighbors(data,instance,k)\n",
         " return getResponse(neighbors)"
       ],
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -488,7 +451,7 @@
         "   populate.append(  getPredictedNeighbor( testTuple , testSet , k ) )\n",
         "  return populate"
       ],
-      "execution_count": 23,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -504,7 +467,7 @@
         "predictions = populatePredictions(trainingSet , testSet , 5)\n",
         "predictions"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +585,7 @@
       "source": [
         "getPredictedNeighbor( [4.9, 3.0, 1.4, 0.2]  , testSet , 5)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,12 +612,12 @@
       "source": [
         "def getAccuracy( testSet , predictions, k ):\n",
         "  correct = 0\n",
-        "  for x in range(len(testSet)):\n",
+        "  for x in range(len(predictions) ):\n",
         "    if( test( testSet[x][4] , predictions[x] )   ):\n",
         "     correct+=1\n",
         "  return  (correct/float(len(testSet)))*100\n"
       ],
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -678,7 +641,7 @@
       "source": [
         "getAccuracy(testSet , predictions , 1)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,15 +658,109 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sJKNDrN48t36"
+      },
+      "source": [
+        "##Main Function"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "owyDjjWA5sf2"
       },
       "source": [
-        ""
+        "def __main(splitThresh , k):\n",
+        "  trainingSet = [] \n",
+        "  testSet= []\n",
+        "  loadDataset( 'iris.data.txt' , splitThresh , trainingSet , testSet)\n",
+        "  predictions = populatePredictions(trainingSet, testSet , k)\n",
+        "  print('Accuracy :' , getAccuracy(testSet , predictions , 1) , '%')\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NSS681jYA6qc",
+        "outputId": "c4647af3-673c-47af-e7d0-4d63ac245d8a"
+      },
+      "source": [
+        "__main(0.66 , 1)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy : 36.45833333333333 %\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AoDmKIVGDa2a"
+      },
+      "source": [
+        "## Alternative Distance Method : Manhattan \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AQ8f74YwA-ip"
+      },
+      "source": [
+        "def manhattanDistance(x1, x2 , length):\n",
+        "  sum = 0 \n",
+        "  for i in range( length ):\n",
+        "    sum += abs(x1[i]-x2[i])\n",
+        "  \n",
+        "  return math.sqrt(sum)"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sHyMIpKKFhKV",
+        "outputId": "f651248a-4869-48d3-de79-a633c40c9b8e"
+      },
+      "source": [
+        "data1 = [2, 2, 2, 'a']\n",
+        "\n",
+        "data2 = [4, 4, 4, 'b']\n",
+        "\n",
+        "distance = manhattanDistance(data1, data2, 3)\n",
+        "\n",
+        "distance"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.449489742783178"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
