--- a/Apriori.ipynb
+++ b/Apriori.ipynb
@@ -47,7 +47,7 @@
         "from mlxtend.preprocessing import TransactionEncoder\n"
       ],
       "id": "cfc2496e",
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
         "   ['Earrings', 'Skirt', 'Skirt', 'Scarf', 'Shirt', 'Pants']]"
       ],
       "id": "5a847273",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -84,7 +84,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "5a5b9f7f",
-        "outputId": "60d795ab-a5a0-46f3-9168-227602699d10"
+        "outputId": "726d7252-571f-4c39-ef51-6d13189bd45e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        }
       },
       "source": [
         "te=TransactionEncoder()\n",
@@ -93,7 +97,7 @@
         "df\n"
       ],
       "id": "5a5b9f7f",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,25 +216,18 @@
               "</div>"
             ],
             "text/plain": [
-              "   Dress  Earrings    Hat  Heels  Necklace  Pants  Sandals  Scarf  Shirt  \\\n",
-              "0  False     False   True  False     False   True    False   True  False   \n",
-              "1  False     False   True  False     False   True    False  False  False   \n",
-              "2   True     False  False   True     False   True     True   True  False   \n",
-              "3   True      True   True   True      True  False    False   True  False   \n",
-              "4  False      True  False  False     False   True    False   True   True   \n",
+              "   Dress  Earrings    Hat  Heels  ...  Shirt  Skirt  Sneakers  Sunglasses\n",
+              "0  False     False   True  False  ...  False   True      True       False\n",
+              "1  False     False   True  False  ...  False   True      True        True\n",
+              "2   True     False  False   True  ...  False  False     False       False\n",
+              "3   True      True   True   True  ...  False  False     False       False\n",
+              "4  False      True  False  False  ...   True   True     False       False\n",
               "\n",
-              "   Skirt  Sneakers  Sunglasses  \n",
-              "0   True      True       False  \n",
-              "1   True      True        True  \n",
-              "2  False     False       False  \n",
-              "3  False     False       False  \n",
-              "4   True     False       False  "
+              "[5 rows x 12 columns]"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -245,9 +242,14 @@
       "id": "fc1a3172"
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "2fe60129"
+        "id": "qzg2w1uzHham",
+        "outputId": "90b5ead7-8a11-41a1-b7c8-0f101d32ce26",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 234
+        }
       },
       "source": [
         "from mlxtend.frequent_patterns import apriori\n",
@@ -256,7 +258,84 @@
         "frequent_itemsets=apriori(df, min_support=0.6, use_colnames=True) #Instead of column indices we can use column names.\n",
         "frequent_itemsets"
       ],
-      "id": "2fe60129"
+      "id": "qzg2w1uzHham",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>support</th>\n",
+              "      <th>itemsets</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.6</td>\n",
+              "      <td>(Hat)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.8</td>\n",
+              "      <td>(Pants)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.8</td>\n",
+              "      <td>(Scarf)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.6</td>\n",
+              "      <td>(Skirt)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.6</td>\n",
+              "      <td>(Scarf, Pants)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>0.6</td>\n",
+              "      <td>(Pants, Skirt)</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   support        itemsets\n",
+              "0      0.6           (Hat)\n",
+              "1      0.8         (Pants)\n",
+              "2      0.8         (Scarf)\n",
+              "3      0.6         (Skirt)\n",
+              "4      0.6  (Scarf, Pants)\n",
+              "5      0.6  (Pants, Skirt)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -272,13 +351,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "82b974c9",
-        "outputId": "0f76a59d-0843-434c-a65e-2a2723152a3d"
+        "outputId": "732e6bc8-9397-424e-b968-8d9b9312e054",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 172
+        }
       },
       "source": [
-        "association_rules(frequent_itemsets,metric=\"confidence\",min_threshold=0.5) # associate itemsets with confidence over 50%.\n"
+        "association_rules(frequent_itemsets,metric=\"confidence\",min_threshold=0.2) # associate itemsets with confidence over 20%.\n"
       ],
       "id": "82b974c9",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,8 +399,8 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>(Pants)</td>\n",
               "      <td>(Scarf)</td>\n",
+              "      <td>(Pants)</td>\n",
               "      <td>0.8</td>\n",
               "      <td>0.8</td>\n",
               "      <td>0.6</td>\n",
@@ -328,8 +411,8 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>(Scarf)</td>\n",
               "      <td>(Pants)</td>\n",
+              "      <td>(Scarf)</td>\n",
               "      <td>0.8</td>\n",
               "      <td>0.8</td>\n",
               "      <td>0.6</td>\n",
@@ -367,23 +450,17 @@
               "</div>"
             ],
             "text/plain": [
-              "  antecedents consequents  antecedent support  consequent support  support  \\\n",
-              "0     (Pants)     (Scarf)                 0.8                 0.8      0.6   \n",
-              "1     (Scarf)     (Pants)                 0.8                 0.8      0.6   \n",
-              "2     (Pants)     (Skirt)                 0.8                 0.6      0.6   \n",
-              "3     (Skirt)     (Pants)                 0.6                 0.8      0.6   \n",
+              "  antecedents consequents  antecedent support  ...    lift  leverage  conviction\n",
+              "0     (Scarf)     (Pants)                 0.8  ...  0.9375     -0.04         0.8\n",
+              "1     (Pants)     (Scarf)                 0.8  ...  0.9375     -0.04         0.8\n",
+              "2     (Pants)     (Skirt)                 0.8  ...  1.2500      0.12         1.6\n",
+              "3     (Skirt)     (Pants)                 0.6  ...  1.2500      0.12         inf\n",
               "\n",
-              "   confidence    lift  leverage  conviction  \n",
-              "0        0.75  0.9375     -0.04         0.8  \n",
-              "1        0.75  0.9375     -0.04         0.8  \n",
-              "2        0.75  1.2500      0.12         1.6  \n",
-              "3        1.00  1.2500      0.12         inf  "
+              "[4 rows x 9 columns]"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
@@ -467,6 +544,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "k3PF7GB2HsMK"
+      },
+      "source": [
+        "## Suggested Strategies \n"
+      ],
+      "id": "k3PF7GB2HsMK"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "feDsXJBeHxTv"
+      },
+      "source": [
+        "- Have packages containing scarfs and pants \n",
+        "- Put additional racks of scarfs next to pants and vice versa since they are both frequently purchased together\n",
+        "- Put additional racks of skirts next to pants since it is likely for one who bought pants to buy skirts "
+      ],
+      "id": "feDsXJBeHxTv"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "0d6b235e"
       },
       "source": [
@@ -488,7 +587,7 @@
         "     data.append(row)  "
       ],
       "id": "01d08723",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +606,7 @@
         "df.isnull().sum().sum()\n"
       ],
       "id": "34acd491",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +639,7 @@
         "frequent_itemsets[ frequent_itemsets['support'] > 0.1 ]"
       ],
       "id": "45f3404d",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +739,7 @@
         "association_rules(frequent_itemsets,metric=\"confidence\",min_threshold=0.0000000000000000000001) "
       ],
       "id": "49353659",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1275,7 @@
         "analysis[ (analysis['support'] > 0.03) & (analysis['confidence'] > 0.2) & (analysis['lift'] > 1.5)]"
       ],
       "id": "c08d3fae",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1399,7 +1498,7 @@
         "analysis[ (analysis['support'] > 0.03) & (analysis['confidence'] > 0.2) & (analysis['lift'] > 1.5)]"
       ],
       "id": "wOG1mh9X0NWZ",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
